--- a/index.html
+++ b/index.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>PHE CELL</title>
+	<title>Welcome</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	
-	<h1>PHE CELL </h1>
-	<h3>Solusi paket data anda</h3>
+    <h4>SELAMAT DATANG DI</h4> 
+    <h1>PHE-CELL</h1>
 
-	<div id="kotak_login">
-		<p class="tulisan_login">Silahkan login</p>
+    <div class="kotak">
+        <a style="text-align: center">Login as..</a>
+        <br/>
+        <br/>
+        <br/>
+        <a href="login.html" class='tombol'>USER</a>
+        <a href="loginadmin.html" class='tombol'>ADMIN</a>
 
-		<form>
-			<label>Username</label>
-            <input type="text" name="username" class="form_login" placeholder="Username atau email ..">
-            
-			<label>Password</label>
-			<input type="text" name="password" class="form_login" placeholder="Password ..">
-
-			<input type="submit" class="tombol_login" value="LOGIN">
-
-			<br/>
-			<br/>
-		</form>
-		
-	</div>
-
+    </div>
 
 </body>
 </html>
