--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>PHE-CELL</h1>
 
     <div class="kotak">
-        <a style="text-align: center">Login as..</a>
+        <a>Login as..</a>
         <br/>
         <br/>
         <br/>
