--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
 			<input type="submit" class="tombol_login" value="LOGIN">
 			<br/>
 			<br/>
-			<label>Belum punya akun? Daftarkan akun anda <a href="register.html">disini..</a></label>
+			<label>Belum punya akun? Daftarkan akun anda <a href="register.html" class="link">disini..</a></label>
 		</form>
 		
 	</div>
