--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h4>SELAMAT DATANG DI</h4> 
     <h1>PHE-CELL</h1>
 
-    <div class="kotak">
+    <div align = "center" class="kotak">
         <a>Login as..</a>
         <br/>
         <br/>
