--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
 <body>
     <h1>MENU</h1>
 
-    <div class="kotak">
+    <div align = "center" class="kotak">
         <a href="#" class='tombol'>BELI</a>
         <a href="#" class='tombol'>BAYAR</a>
 
