--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
 	<title>Welcome</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-    <h4>SELAMAT DATANG DI</h4> 
-    <h1>PHE-CELL</h1>
-
-    <div align = "center" class="kotak">
-        <a>Login as..</a>
-        <br/>
-        <br/>
-        <br/>
-        <a href="login.html" class='tombol'>USER</a>
-        <a href="loginadmin.html" class='tombol'>ADMIN</a>
-
+<body class="muka">
+    <div class="welcome">
+        <div>
+                <br/>
+                <br/>
+                <br/>
+                <a href="login.html" class='tombol'><b>USER</b></a>
+                <a href="loginadmin.html" class='tombol'><b>ADMIN</b></a>
+        </div>
     </div>
 
 </body>
