--- a/login.html
+++ b/login.html
@@ -17,12 +17,12 @@
             <input type="text" name="username" class="form_login" placeholder="Username..">
             
 			<label>Password</label>
-			<input type="text" name="password" class="form_login" placeholder="Password ..">
+			<input type="password" name="password" class="form_login" placeholder="Password ..">
 
 			<input type="submit" class="tombol_login" value="LOGIN">
 			<br/>
 			<br/>
-			<label>Belum punya akun? Daftarkan akun anda <a href="register.html" class="link">disini..</a></label>
+			<label align="center">Belum punya akun? Daftarkan akun anda <a href="register.html" class="link">disini..</a></label>
 		</form>
 		
 	</div>
