--- a/loginadmin.html
+++ b/loginadmin.html
@@ -16,7 +16,7 @@
             <input type="text" name="username" class="form_login" placeholder="Username..">
             
 			<label>Password</label>
-			<input type="text" name="password" class="form_login" placeholder="Password ..">
+			<input type="password" name="password" class="form_login" placeholder="Password ..">
 
 			<input type="submit" class="tombol_login" value="LOGIN">
 			<br/>
