--- a/register.html
+++ b/register.html
@@ -18,10 +18,10 @@
             <input type="text" name="username" class="form_login" placeholder="Username">
 
 			<label>Password</label>
-            <input type="text" name="password" class="form_login" placeholder="Password ..">
+            <input type="password" name="password" class="form_login" placeholder="Password ..">
             
             <label>Re-Type Password</label>
-			<input type="text" name="password" class="form_login" placeholder="Password ..">
+			<input type="password" name="password" class="form_login" placeholder="Password ..">
 
 			<input type="submit" class="tombol_regist" value="SUBMIT">
 
