--- a/status.html
+++ b/status.html
@@ -3,11 +3,12 @@
 <head>
 	<title>Status Pelanggan</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 </head>
 <body class="inapp">
 	<div>
-		<a>Status Pemesan</a>
-		<table id="outtable">
+		<a class="text-lg-center text-uppercase">Status Pemesan</a>
+		<table id="outtable" class="table1">
 			<thead>
 				<tr>
 					<th class="short">No.</th>
@@ -16,6 +17,8 @@
 					<th class="normal">Provider</th>
 					<th class="normal">Nominal</th>
 					<th class="normal">Harga Total</th>
+					<th class="normal">Status</th>
+					<th class="normal">Status Pengiriman</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -26,6 +29,25 @@
 					<td>Indosat</td>
 					<td>5000</td>
 					<td>6500</td>
+					<td>
+						<div class="kustom-select" style="width:150px;">
+							<select>
+									<option value="0">Belum Bayar</option>
+									<option value="1">Sudah Bayar</option>
+									<option value="1">Belum Bayar</option>
+							</select>
+						</div>
+					</td>
+					<td>
+						<div class="kustom-select" style="width:150px;">
+							<select>
+									<option value="0">Belum Terkirim</option>
+									<option value="1">Sudah Terkirim</option>
+									<option value="1">Belum Terkirim</option>
+							</select>
+						</div>
+					</td>
+
 				</tr>
 	  
 				<tr>
@@ -35,6 +57,24 @@
 					<td>XL</td>
 					<td>10000</td>
 					<td>11500</td>
+					<td>
+						<div class="kustom-select" style="width:150px;">
+							<select>
+									<option value="0">Belum Bayar</option>
+									<option value="1">Sudah Bayar</option>
+									<option value="1">Belum Bayar</option>
+							</select>
+						</div>
+					</td>
+					<td>
+						<div class="kustom-select" style="width:150px;">
+							<select>
+									<option value="0">Belum Terkirim</option>
+									<option value="1">Sudah Terkirim</option>
+									<option value="1">Belum Terkirim</option>
+							</select>
+						</div>
+					</td>
 				</tr>
 	  
 				<tr>
@@ -44,6 +84,24 @@
 					<td>Simpati</td>
 					<td>5000</td>
 					<td>7500</td>
+					<td>
+						<div class="kustom-select" style="width:150px;">
+							<select>
+									<option value="0">Belum Bayar</option>
+									<option value="1">Sudah Bayar</option>
+									<option value="1">Belum Bayar</option>
+							</select>
+						</div>
+					</td>
+					<td>
+						<div class="kustom-select" style="width:150px;">
+							<select>
+									<option value="0">Belum Terkirim</option>
+									<option value="1">Sudah Terkirim</option>
+									<option value="1">Belum Terkirim</option>
+							</select>
+						</div>
+					</td>
 				</tr>
 	  
 				<tr>
@@ -53,8 +111,102 @@
 					<td>Simpati</td>
 					<td>10000</td>
 					<td>12500</td>
+					<td>
+						<div class="kustom-select" style="width:150px;">
+							<select>
+									<option value="0">Belum Bayar</option>
+									<option value="1">Sudah Bayar</option>
+									<option value="1">Belum Bayar</option>
+							</select>
+						</div>
+					</td>
+					<td>
+						<div class="kustom-select" style="width:150px;">
+							<select>
+									<option value="0">Belum Terkirim</option>
+									<option value="1">Sudah Terkirim</option>
+									<option value="1">Belum Terkirim</option>
+							</select>
+						</div>
+					</td>
 				</tr>
 			</tbody>
 		</table>
 	   </div>
+	   <script>
+			var x, i, j, selElmnt, a, b, c;
+			/*look for any elements with the class "kustom-select":*/
+			x = document.getElementsByClassName("kustom-select");
+			for (i = 0; i < x.length; i++) {
+			  selElmnt = x[i].getElementsByTagName("select")[0];
+			  /*for each element, create a new DIV that will act as the selected item:*/
+			  a = document.createElement("DIV");
+			  a.setAttribute("class", "select-selected");
+			  a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
+			  x[i].appendChild(a);
+			  /*for each element, create a new DIV that will contain the option list:*/
+			  b = document.createElement("DIV");
+			  b.setAttribute("class", "select-items select-hide");
+			  for (j = 1; j < selElmnt.length; j++) {
+				/*for each option in the original select element,
+				create a new DIV that will act as an option item:*/
+				c = document.createElement("DIV");
+				c.innerHTML = selElmnt.options[j].innerHTML;
+				c.addEventListener("click", function(e) {
+					/*when an item is clicked, update the original select box,
+					and the selected item:*/
+					var y, i, k, s, h;
+					s = this.parentNode.parentNode.getElementsByTagName("select")[0];
+					h = this.parentNode.previousSibling;
+					for (i = 0; i < s.length; i++) {
+					  if (s.options[i].innerHTML == this.innerHTML) {
+						s.selectedIndex = i;
+						h.innerHTML = this.innerHTML;
+						y = this.parentNode.getElementsByClassName("same-as-selected");
+						for (k = 0; k < y.length; k++) {
+						  y[k].removeAttribute("class");
+						}
+						this.setAttribute("class", "same-as-selected");
+						break;
+					  }
+					}
+					h.click();
+				});
+				b.appendChild(c);
+			  }
+			  x[i].appendChild(b);
+			  a.addEventListener("click", function(e) {
+				  /*when the select box is clicked, close any other select boxes,
+				  and open/close the current select box:*/
+				  e.stopPropagation();
+				  closeAllSelect(this);
+				  this.nextSibling.classList.toggle("select-hide");
+				  this.classList.toggle("select-arrow-active");
+				});
+			}
+			function closeAllSelect(elmnt) {
+			  /*a function that will close all select boxes in the document,
+			  except the current select box:*/
+			  var x, y, i, arrNo = [];
+			  x = document.getElementsByClassName("select-items");
+			  y = document.getElementsByClassName("select-selected");
+			  for (i = 0; i < y.length; i++) {
+				if (elmnt == y[i]) {
+				  arrNo.push(i)
+				} else {
+				  y[i].classList.remove("select-arrow-active");
+				}
+			  }
+			  for (i = 0; i < x.length; i++) {
+				if (arrNo.indexOf(i)) {
+				  x[i].classList.add("select-hide");
+				}
+			  }
+			}
+			/*if the user clicks anywhere outside the select box,
+			then close all select boxes:*/
+			document.addEventListener("click", closeAllSelect);
+		</script>
+	<!--	<script src="bootstrap/bootstrap.min.js"></script>	-->
 </body>
+</html>
