--- a/status.html
+++ b/status.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body class="inapp">
-    <nav class="navbar navbar-default navbar navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar navbar-fixed-top">
         <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -97,7 +97,7 @@
                                 <select>
                                         <option value="0">Belum Bayar</option>
                                         <option value="1">Sudah Bayar</option>
-                                        <option value="1">Belum Bayar</option>
+                                        <option value="0">Belum Bayar</option>
                                 </select>
                             </div>
                         </td>
