--- a/pesan.html
+++ b/pesan.html
@@ -1,23 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Status Pelanggan</title>
-	<!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-    <script type="text/javascript" src="jquery.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+	<title>Pesanan</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script type="text/javascript" src="jquery.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Buat Pesanan Anda</h1>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #bb7423;" >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#" style="color: white">LOGO</a>
+      
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="#" style="color: white">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: #664014">Beli <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" style="color: white">Bayar</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white">Hi, User!</a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Logout</a>
+                  </div>
+              </li>
+        </div>
+    </nav>
+    <div class="container" style="margin: 10px" align="center">
         <form>
+            <label> Pilih Operator</label>
+            <br/>
+            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-light active">
+                  <input type="radio" name="options" id="option1" autocomplete="off" checked> <img src="src/axis.png" height="50" alt="axis">
+                </label>
+                <label class="btn btn-light">
+                  <input type="radio" name="options" id="option2" autocomplete="off"> <img src="src/axis.png" height="50" alt="axis">
+                </label>
+                <label class="btn btn-light">
+                  <input type="radio" name="options" id="option3" autocomplete="off"> <img src="src/axis.png" height="50" alt="axis">
+                </label>
+          </div>
+          <br>
+          <br/>
           <div class="form-group">
             <label for="nom">Nominal</label>
-            <select class="form-control" id="nom">
+            <select class="form-control" id="nom" style="width: 200px">
                 <option value="0">-- Pilih Nominal --</option>
                 <option value="1">5000</option>
                 <option value="2">10000</option>
@@ -27,8 +67,9 @@
           </div>
           <div>
               <label for="diskon">Reedeem Code</label>
-              <input type="text" class="form-control">
+              <input type="text" class="form-control" style="width: 200px" >
           </div>
+          <br/>
           <button type="submit" class="btn btn-primary">Simpan</button>
         </form>
       </div>
