--- a/login.html
+++ b/login.html
@@ -3,6 +3,9 @@
 <head>
 	<title>LOGIN</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<style>
+		@import url('https://fonts.googleapis.com/css?family=Nunito|Source+Sans+Pro&display=swap');
+	</style>
 </head>
 <body>
 	
@@ -10,9 +13,10 @@
 	<h3>Solusi paket data anda</h3>
 
 	<div class="kotak">
-		<p class="tulisan_login">Silahkan login</p>
-
 		<form>
+			<div>
+				<label class="judul-form">Silahkan Login</label>
+			</div>
 			<label>Username</label>
             <input type="text" name="username" class="form_login" placeholder="Username..">
             
