--- a/loginadmin.html
+++ b/loginadmin.html
@@ -3,15 +3,19 @@
 <head>
 	<title>LOGIN</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<style>
+			@import url('https://fonts.googleapis.com/css?family=Nunito|Source+Sans+Pro&display=swap');
+	</style>
 </head>
 <body>
 	
-	<h1>PHE CELL Admin</h1>
+	<h1>PHE CELL Administrator</h1>
 
 	<div class="kotak">
-		<p class="tulisan_login">Silahkan login</p>
-
 		<form>
+			<div>
+				<label class="judul-form">Silahkan Login</label>
+			</div>
 			<label>Username</label>
             <input type="text" name="username" class="form_login" placeholder="Username..">
             
