--- a/pesan.html
+++ b/pesan.html
@@ -9,69 +9,92 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <!-- Latest compiled and minified JavaScript -->
   <link rel="stylesheet" type="text/css" href="style.css">
+  <style>
+      @import url('https://fonts.googleapis.com/css?family=Nunito|Source+Sans+Pro&display=swap');
+      </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #bb7423;" >
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark fixed-top" >
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#" style="color: white">LOGO</a>
+        <a class="navbar-brand" href="#"><img src="src/Logo Phecell.png" height="30" alt="axis"></a>
       
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="home.html">Home</a>
+            </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#" style="color: white">Home</a>
+              <a class="nav-link" href="pesan.html">Beli <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" style="color: #664014">Beli <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" style="color: white">Bayar</a>
+                <a class="nav-link" href="bayar.html">Bayar</a>
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
-              <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white">Hi, User!</a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Logout</a>
-                  </div>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Hi, User!</a>
               </li>
+              <li class="nav-item">
+                <a class="btn btn-outline-warning" href="index.html">Logout</a>
+              </li>
+          </ul>
         </div>
     </nav>
-    <div class="container" style="margin: 10px" align="center">
-        <form>
-            <label> Pilih Operator</label>
+    <div class="container" style="margin-top: 20px">
+        <div class="row justify-content-center align-items-center">
+          <h1><br/>Buat Pesananmu!</h1>
+          <form align="center" style="margin: 10px">
+              <div align="center" >
+                <label for="nomor">No. HP</label>
+                <input type="text" class="form-control" style="width: 200px" maxlength="12" >
+              </div>
+              <label><br/>Pilih Operator</label>
+              <br/>
+              <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-light active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> <img src="src/1_bolt.png" height="100" alt="axis">
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> <img src="src/2_smartfren.png" height="100" alt="axis">
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> <img src="src/3_tri.png" height="100" alt="axis">
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option4" autocomplete="off"> <img src="src/4_axis.png" height="100" alt="axis">
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option5" autocomplete="off"> <img src="src/5_telkomsel.png" height="100" alt="axis">
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option6" autocomplete="off"> <img src="src/6_indosat.png" height="100" alt="axis">
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option7" autocomplete="off"> <img src="src/7_xl.png" height="100" alt="axis">
+                  </label>
+            </div>
+            <br>
             <br/>
-            <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-light active">
-                  <input type="radio" name="options" id="option1" autocomplete="off" checked> <img src="src/axis.png" height="50" alt="axis">
-                </label>
-                <label class="btn btn-light">
-                  <input type="radio" name="options" id="option2" autocomplete="off"> <img src="src/axis.png" height="50" alt="axis">
-                </label>
-                <label class="btn btn-light">
-                  <input type="radio" name="options" id="option3" autocomplete="off"> <img src="src/axis.png" height="50" alt="axis">
-                </label>
-          </div>
-          <br>
-          <br/>
-          <div class="form-group">
-            <label for="nom">Nominal</label>
-            <select class="form-control" id="nom" style="width: 200px">
-                <option value="0">-- Pilih Nominal --</option>
-                <option value="1">5000</option>
-                <option value="2">10000</option>
-                <option value="3">20000</option>
-                <option value="4">50000</option>
-            </select>
-          </div>
-          <div>
-              <label for="diskon">Reedeem Code</label>
-              <input type="text" class="form-control" style="width: 200px" >
-          </div>
-          <br/>
-          <button type="submit" class="btn btn-primary">Simpan</button>
-        </form>
+            <div class="form-group" align="center">
+              <label for="nom">Nominal</label>
+              <select class="form-control" id="nom" style="width: 200px">
+                  <option value="0">-- Pilih Nominal --</option>
+                  <option value="1">5000</option>
+                  <option value="2">10000</option>
+                  <option value="3">20000</option>
+                  <option value="4">50000</option>
+              </select>
+            </div>
+            <div align="center" >
+                <label for="diskon">Reedeem Code</label>
+                <input type="text" class="form-control" style="width: 200px" >
+            </div>
+            <br/>
+            <button type="submit" class="btn btn-primary">Simpan</button>
+          </form>
+        </div>
       </div>
 </body>
 </html>
