--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       @import url('https://fonts.googleapis.com/css?family=Nunito|Source+Sans+Pro&display=swap');
       </style>
 </head>
-<body>
+<body class="muka">
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark" >
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
