--- a/salah.html
+++ b/salah.html
@@ -42,23 +42,11 @@
           </ul>
         </div>
     </nav>
-    <div class="container" style="margin-top: 20px">
-        <div class="row justify-content-center align-items-center">
-          <form align="center" style="margin: 10px">
-              <div style="margin: 0 auto;text-align:center">
-                  <br/>
-                  <br/>
-                  <img src="src/logotulisan_v2/Tulisan/konfirmbayar.png" width="500">
-              </div> 
-            <div align="center" >
-              <br/>
-                <label for="nomor">Kode Bayar</label>
-                <input type="text" class="form-control" style="width: 200px">
-            </div>
-            <br/>
-            <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-    </div>
+    <div class="box">
+        <img src="src/logotulisan_v2/Kotak-Transparan/kotakgagal.png">
+        <a class="tulisan-box" style="color: white"><b>!!! GAGAL !!!</b></a>
+        <p class="isi-box">Kode Pembayaran salah atau anda belum membayarnya ke Bank</p>
+        <a class="kembali btn btn-danger" style="color: white" href="bayar.html">Kembali</a>
+    </div> 
 </body>
 </html>
