--- a/struk.html
+++ b/struk.html
@@ -45,9 +45,12 @@
     <div class="container">
         <div class="row justify-content-center align-items-center">
             <div class="col-md-8" align="center">
-                <h1>STRUK</h1>
+                <div style="margin: 0 auto;text-align:center">
+                    <img src="src/logotulisan_v2/Tulisan/Struk.png" width="250">
+                </div>
                 <br/>
-                <table class="struk table table-borderless table-sm table responsive ">
+                <a><img src="src/logotulisan_v2/Kotak-Transparan/Rounded Edgges Struk.png"></a>
+                <table class="struk table table-borderless table-sm table responsive ">                    
                         <tbody>
                         <tr>
                             <td><b>Nama</b></td>
@@ -86,7 +89,7 @@
                         </tr>
                         </tbody>
                 </table>
-                <a class="btn btn-warning" href="home.html">Kembali</a>
+                <a class="btn btn-danger tombol-kembali" href="home.html">Kembali</a>
             </div>
         </div>
     </div>
